monitoring/kong-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-metrics
  namespace: kong
spec:
  selector:
    app.kubernetes.io/instance: kong-iac
    app.kubernetes.io/name: kong
  ports:
    - name: metrics
      protocol: TCP
      port: 8100
      targetPort: 8100
  type: ClusterIP
